# AICODER_GAME1

./: .gitignore  BUILDCOMMAND.txt  CMakeLists.txt  GITCOMMAND.txt  QUICKSTART.md  README.md  build.bat  config.ini  data.txt  settings.ini
build-msvc/: CMakeCache.txt
docs/: UI_COMPONENTS.md
src/: main.cpp
src/core/: Config.cpp  Config.h  Engine.cpp  Engine.h  Logger.h  Settings.cpp  Settings.h  Time.cpp  Time.h  Window.cpp  Window.h
src/ecs/: Component.h  Entity.cpp  Entity.h  System.h  World.cpp
src/entities/: Building.cpp  Building.h  Character.cpp  Character.h
src/entities/AI/: BehaviorTree.h  Pathfinding.cpp  Pathfinding.h
src/rendering/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  SpriteBatch.cpp  SpriteBatch.h  TileMap.cpp  TileMap.h
src/save/: SaveManager.cpp  SaveManager.h
src/session/: GameSessionManager.cpp  GameSessionManager.h
src/simulation/: Cell.h  ChunkManager.cpp  ChunkManager.h  ElementTypes.cpp  ElementTypes.h  FluidSim.cpp  FluidSim.h  GasSim.cpp  GasSim.h  Grid.cpp  Grid.h  HeatMap.cpp  HeatMap.h  HeatSim.cpp  HeatSim.h  SimulationManager.cpp  SimulationManager.h  SimulationSystem.h
src/simulation/elements/: BaseElements.h  Gases.h  Liquids.h  Solids.h  SpecialElements.h
src/systems/: BuildingSystem.cpp  BuildingSystem.h  CraftingSystem.cpp  CraftingSystem.h  ResourceSystem.cpp  ResourceSystem.h
src/ui/: GameConsole.cpp  GameConsole.h  GameGUI.cpp  GameGUI.h  LoadGameMenu.cpp  LoadGameMenu.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h  SaveGameDialog.cpp  SaveGameDialog.h  SettingsMenu.cpp  SettingsMenu.h  UIBorder.cpp  UIBorder.h  UIButton.cpp  UIButton.h  UICheckbox.cpp  UICheckbox.h  UIDropdown.cpp  UIDropdown.h  UIElement.h  UIElementSelector.cpp  UIElementSelector.h  UINumberInput.cpp  UINumberInput.h  UIProgressBar.cpp  UIProgressBar.h  UIRadioButton.cpp  UIRadioButton.h  UISlider.cpp  UISlider.h  UITextInput.cpp  UITextInput.h  UIToggle.cpp  UIToggle.h  UITooltip.cpp  UITooltip.h
src/ui/Menus/: LoadGameMenu.cpp  LoadGameMenu.h  MainMenu.h  PauseMenu.cpp  PauseMenu.h  SaveGameDialog.cpp  SaveGameDialog.h  SettingsMenu.h
src/ui/UIElements/: UIBorder.cpp  UIBorder.h  UIButton.cpp  UIButton.h  UICheckbox.cpp  UICheckbox.h  UIDropdown.cpp  UIElement.cpp  UIElement.h  UIElementSelector.cpp  UIElementSelector.h  UINumberInput.cpp  UIProgressBar.cpp  UIRadioButton.cpp  UISaveEntry.cpp  UISaveEntry.h  UIScrollBorder.cpp  UIScrollBorder.h  UISlider.cpp  UITextInput.cpp  UIThumbnailViewer.cpp  UIThumbnailViewer.h  UIToggle.cpp  UITooltip.cpp
